# project_X

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/research/elf-inject/: Makefile  infector.c  infector.h
docs/research/elf-inject-v2/: elf.h  injector.h
research/: hello_world_source_app
research/elf-inject/: elf.h  main.c
research/elf-inject-v2/: CMakeLists.txt  injector.c  main.c
src/: Main.cpp  main.cpp
src/arm32/: Hello_world
src/elf/: Dockerfile  Makefile  README.md  codeCave.c  codeCave.h  codeCavePayload.h  common.c  common.h  docker.sh  elf.h  helloHSE.c  helloMSU.asm  main.c
src/inject/: Inject.h  Intect.h  inject.cpp  inject.h
src/inject/linux/: InjectL.h  inject_l.cpp  inject_l.h
src/inject/macos/: InjectM.h  inject_m.cpp  inject_m.h
src/inject/windows/: InjectW.h  inject_w.cpp  inject_w.h
src/isa/: utils.cpp  utils.h
src/isa/aarch64/: AArch64.h  aarch64.h
src/isa/riscv64/: RiscV64.h  riscv64.h
src/isa/x64/: X64.h  x64.h
src/test/: Makefile  test.c  test_arm64.s  test_riscv.s  test_x64.s
